--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -167,15 +167,9 @@ jobs:
             -backend-config="encrypt=true" \
             -reconfigure
 
-      - name: Download Plan Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: tfplan
-          path: .
-
       - name: Terraform Apply (Staging)
         if: github.event.inputs.action != 'plan'
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply -auto-approve 
 
       - name: Update kubeconfig
         run: |
@@ -233,8 +227,7 @@ jobs:
 
       - name: Terraform Apply (Production)
         if: github.event.inputs.action != 'plan'
-        run: terraform apply -auto-approve tfplan-prod
-
+        run: terraform apply -auto-approve 
       - name: Update kubeconfig
         run: |
           aws eks update-kubeconfig \
